# genetec_mcp_server

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_LOG.md  deployment.md  pyproject.toml
docs/: troubleshooting-connection-staleness.md
genetec_sdk_service/: GenetecSdkService.sln
genetec_sdk_service/src/GenetecSdkService.Api/: GenetecSdkService.Api.csproj  Program.cs  appsettings.json
genetec_sdk_service/src/GenetecSdkService.Api/Endpoints/: AccessControlEndpoints.cs  AccessRuleEndpoints.cs  AlarmEndpoints.cs  CardholderEndpoints.cs  CleanupEndpoints.cs  CredentialEndpoints.cs  DiagnosticEndpoints.cs  DoorEndpoints.cs  EventToActionEndpoints.cs  SystemEndpoints.cs
genetec_sdk_service/src/GenetecSdkService.Api/Models/: ApiResponse.cs
genetec_sdk_service/src/GenetecSdkService.Api/Services/: AccessControlService.cs  AccessRuleService.cs  AlarmService.cs  CardholderService.cs  CleanupService.cs  CredentialService.cs  DoorService.cs  EventToActionService.cs  GenetecEngineService.cs
src/genetec_mcp_server/: __init__.py  __main__.py  config.py  connection.py  sdk_loader.py  server.py  tool_logger.py
tests/: test_access_rules.py  test_connection.py  test_discovery_mercury.py  test_sdk_loader.py  test_server.py  test_tool_logger.py
